<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.myproject</groupId>
    <artifactId>bigdata</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>spark</module>
        <module>scala</module>
        <module>hbase</module>
        <module>kafka</module>
        <module>hadoop</module>
        <module>storm</module>
        <module>flink</module>
        <module>akka</module>
        <module>java</module>
        <module>antlr</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <scala.main.version>2.12</scala.main.version>
        <scala.version>2.12.16</scala.version>
<!--        <scala.main.version>2.11</scala.main.version>-->
<!--        <scala.version>2.11.12</scala.version>-->
        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>

        <lombok.version>1.18.20</lombok.version>
        <jackson.version>2.9.0</jackson.version>
        <compress.version>1.21</compress.version>
        <caffeine.version>2.9.0</caffeine.version>
        <druid.version>1.2.5</druid.version>
        <jedis.version>2.9.0</jedis.version>
        <redisson.version>3.12.0</redisson.version>
        <hadoop.version>3.1.4</hadoop.version>
        <hive.version>3.1.2</hive.version>
        <zookeeper.version>3.8.1</zookeeper.version>
        <curator.version>5.3.0</curator.version>
        <hbase.version>2.4.15</hbase.version>
        <kafka.version>2.8.1</kafka.version>
        <strom.version>2.4.0</strom.version>
        <spark.version>2.3.3</spark.version>
        <flink.version>1.13.6</flink.version>
        <hudi.version>0.12.0</hudi.version>

        <jdbc.version>5.1.47</jdbc.version>
        <mysql.cdc.version>1.3.0</mysql.cdc.version>
        <flink.jdbc.version>1.6.1</flink.jdbc.version>
        <flink.hdfs.version>1.10.1</flink.hdfs.version>
        <flink.redis.version>1.1.5</flink.redis.version>
        <hive-jdbc.version>1.1.0-cdh5.16.2</hive-jdbc.version>

        <junit.version>4.13.2</junit.version>
        <slf4j.version>2.0.5</slf4j.version>
        <logback.version>1.4.7</logback.version>
        <encoding>UTF-8</encoding>
    </properties>


    <dependencies>
        <!-- junit test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- logback -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>${logback.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <testSource>${java.version}</testSource>
                    <testTarget>${java.version}</testTarget>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>java.base/java.lang=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>java.base/java.lang=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>java.base/java.util=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>